@@ -966,13 +966,6 @@ name|libDir
 init|=
 literal|null
 decl_stmt|;
-DECL|field|libLoader
-specifier|protected
-name|ClassLoader
-name|libLoader
-init|=
-literal|null
-decl_stmt|;
 DECL|field|loader
 specifier|protected
 name|SolrResourceLoader
@@ -2234,6 +2227,72 @@ operator|.
 name|substituteProperties
 argument_list|()
 expr_stmt|;
+comment|// add the sharedLib to the shared resource loader before initializing cfg based plugins
+name|libDir
+operator|=
+name|cfg
+operator|.
+name|get
+argument_list|(
+name|ConfigSolr
+operator|.
+name|ConfLevel
+operator|.
+name|SOLR
+argument_list|,
+literal|"sharedLib"
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|libDir
+operator|!=
+literal|null
+condition|)
+block|{
+name|File
+name|f
+init|=
+name|FileUtils
+operator|.
+name|resolvePath
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|dir
+argument_list|)
+argument_list|,
+name|libDir
+argument_list|)
+decl_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"loading shared library: "
+operator|+
+name|f
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|loader
+operator|.
+name|addToClassLoader
+argument_list|(
+name|libDir
+argument_list|)
+expr_stmt|;
+name|loader
+operator|.
+name|reloadLuceneSPI
+argument_list|()
+expr_stmt|;
+block|}
 name|shardHandlerFactory
 operator|=
 name|cfg
@@ -2580,23 +2639,6 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
-name|libDir
-operator|=
-name|cfg
-operator|.
-name|get
-argument_list|(
-name|ConfigSolr
-operator|.
-name|ConfLevel
-operator|.
-name|SOLR
-argument_list|,
-literal|"sharedLib"
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
 name|zkHost
 operator|=
 name|cfg
@@ -2905,53 +2947,6 @@ argument_list|,
 literal|"SolrCloud requires a value of at least 2 in solr.xml for coreLoadThreads"
 argument_list|)
 throw|;
-block|}
-if|if
-condition|(
-name|libDir
-operator|!=
-literal|null
-condition|)
-block|{
-name|File
-name|f
-init|=
-name|FileUtils
-operator|.
-name|resolvePath
-argument_list|(
-operator|new
-name|File
-argument_list|(
-name|dir
-argument_list|)
-argument_list|,
-name|libDir
-argument_list|)
-decl_stmt|;
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"loading shared library: "
-operator|+
-name|f
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|libLoader
-operator|=
-name|SolrResourceLoader
-operator|.
-name|createClassLoader
-argument_list|(
-name|f
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
 block|}
 if|if
 condition|(
@@ -4904,7 +4899,10 @@ name|instanceDir
 argument_list|,
 name|zkConfigName
 argument_list|,
-name|libLoader
+name|loader
+operator|.
+name|getClassLoader
+argument_list|()
 argument_list|,
 name|ConfigSolrXml
 operator|.
@@ -5067,7 +5065,10 @@ name|SolrResourceLoader
 argument_list|(
 name|instanceDir
 argument_list|,
-name|libLoader
+name|loader
+operator|.
+name|getClassLoader
+argument_list|()
 argument_list|,
 name|ConfigSolrXml
 operator|.
@@ -5714,7 +5715,10 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 argument_list|,
-name|libLoader
+name|loader
+operator|.
+name|getClassLoader
+argument_list|()
 argument_list|,
 name|ConfigSolrXml
 operator|.
@@ -5809,7 +5813,10 @@ argument_list|()
 argument_list|,
 name|zkConfigName
 argument_list|,
-name|libLoader
+name|loader
+operator|.
+name|getClassLoader
+argument_list|()
 argument_list|,
 name|ConfigSolrXml
 operator|.
@@ -6347,20 +6354,6 @@ name|String
 name|adminHandlerClass
 parameter_list|)
 block|{
-comment|// :TODO: why create a new SolrResourceLoader? why not use this.loader ???
-name|SolrResourceLoader
-name|loader
-init|=
-operator|new
-name|SolrResourceLoader
-argument_list|(
-name|solrHome
-argument_list|,
-name|libLoader
-argument_list|,
-literal|null
-argument_list|)
-decl_stmt|;
 return|return
 name|loader
 operator|.
