@@ -1578,6 +1578,124 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|testClassLoaderHierarchy
+specifier|public
+name|void
+name|testClassLoaderHierarchy
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|CoreContainer
+name|cc
+init|=
+name|init
+argument_list|(
+literal|"_classLoaderHierarchy"
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|cc
+operator|.
+name|setPersistent
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|ClassLoader
+name|sharedLoader
+init|=
+name|cc
+operator|.
+name|loader
+operator|.
+name|getClassLoader
+argument_list|()
+decl_stmt|;
+name|ClassLoader
+name|contextLoader
+init|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|getContextClassLoader
+argument_list|()
+decl_stmt|;
+name|assertSame
+argument_list|(
+name|contextLoader
+argument_list|,
+name|sharedLoader
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|CoreDescriptor
+name|descriptor1
+init|=
+operator|new
+name|CoreDescriptor
+argument_list|(
+name|cc
+argument_list|,
+literal|"core1"
+argument_list|,
+literal|"./collection1"
+argument_list|)
+decl_stmt|;
+name|SolrCore
+name|core1
+init|=
+name|cc
+operator|.
+name|create
+argument_list|(
+name|descriptor1
+argument_list|)
+decl_stmt|;
+name|ClassLoader
+name|coreLoader
+init|=
+name|core1
+operator|.
+name|getResourceLoader
+argument_list|()
+operator|.
+name|getClassLoader
+argument_list|()
+decl_stmt|;
+name|assertSame
+argument_list|(
+name|sharedLoader
+argument_list|,
+name|coreLoader
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|core1
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cc
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|field|EMPTY_SOLR_XML
 specifier|private
 specifier|static
